@@ -4,6 +4,8 @@
 
 package frc.robot;
 
+// import frc.robot.Constants.ShooterConstants;
+import java.util.Set;
 import com.pathplanner.lib.auto.AutoBuilder;
 import com.pathplanner.lib.auto.NamedCommands;
 import com.pathplanner.lib.commands.PathPlannerAuto;
@@ -43,433 +45,404 @@ import swervelib.SwerveInputStream;
 
 public class RobotContainer {
 
-    // controllers
-    final CommandXboxController driverXbox = new CommandXboxController(0);
-    final CommandXboxController operatorXbox = new CommandXboxController(1);
+  // controllers
+  final CommandXboxController driverXbox = new CommandXboxController(0);
+  final CommandXboxController operatorXbox = new CommandXboxController(1);
 
-    // subsystems
-    private final SwerveSubsystem drivebase = new SwerveSubsystem(new File(Filesystem.getDeployDirectory(), "swerve"));
-    private final Intake m_intake = new Intake();
-    private final Hood m_hood = new Hood();
-    private final Shooter m_shooter = new Shooter();
-    private final Turret m_turret = new Turret();
-    private final Conveyor m_conveyor = new Conveyor();
-    private final Rollers m_rollers = new Rollers();
-    private final Pushout m_pushout = new Pushout();
-    private final Kicker m_kicker = new Kicker();
+  // subsystems
+  private final SwerveSubsystem drivebase = new SwerveSubsystem(new File(Filesystem.getDeployDirectory(), "swerve"));
+  private final Intake m_intake = new Intake();
+  private final Hood m_hood = new Hood();
+  private final Shooter m_shooter = new Shooter();
+  private final Turret m_turret = new Turret();
+  private final Conveyor m_conveyor = new Conveyor();
+  private final Rollers m_rollers = new Rollers();
+  private final Pushout m_pushout = new Pushout();
+  private final Kicker m_kicker = new Kicker();
+  @SuppressWarnings("unused")
+  private final HubTrackerSubsystem m_hubtracker = new HubTrackerSubsystem(drivebase, driverXbox);
+
+  // auto choosers
+  private SendableChooser<Command> autoChooser;
+  private LoggedDashboardChooser<Command> loggedAutoChooser;
+  private SendableChooser<Boolean> flipChooser = new SendableChooser<>();
+
+  /**
+   * Converts driver input into a field-relative ChassisSpeeds that is controlled
+   * by angular velocity.
+   */
+  SwerveInputStream driveAngularVelocity;
+
+  /**
+   * Clone's the angular velocity input stream and converts it to a fieldRelative
+   * input stream.
+   */
+  SwerveInputStream driveDirectAngle;
+
+  /**
+   * Clone's the angular velocity input stream and converts it to a robotRelative
+   * input stream.
+   */
+  SwerveInputStream driveRobotOriented;
+
+  SwerveInputStream driveAngularVelocityKeyboard;
+  // Derive the heading axis with math!
+  SwerveInputStream driveDirectAngleKeyboard;
+
+  @SuppressWarnings("unused")
+  private PathConstraints autoConstraints;
+
+  public void warmupCommands() {
     @SuppressWarnings("unused")
-    private final HubTrackerSubsystem m_hubtracker = new HubTrackerSubsystem(drivebase, driverXbox);
+    ControlAllShooting shootWarm = new ControlAllShooting(
+        m_shooter, m_conveyor, m_kicker, m_hood, m_rollers, m_turret, drivebase);
+    @SuppressWarnings("unused")
+    AimTurret turretWarm = new AimTurret(m_turret, drivebase);
+    @SuppressWarnings("unused")
+    AimHood hoodWarm = new AimHood(m_hood, drivebase);
+  }
 
-    // auto choosers
-    private SendableChooser<Command> autoChooser;
-    private LoggedDashboardChooser<Command> loggedAutoChooser;
-    private SendableChooser<Boolean> flipChooser = new SendableChooser<>();
+  public RobotContainer() {
 
-    /**
-     * Converts driver input into a field-relative ChassisSpeeds that is controlled
-     * by angular velocity.
-     */
-    SwerveInputStream driveAngularVelocity;
+    configureBindings();
 
-    /**
-     * Clone's the angular velocity input stream and converts it to a fieldRelative
-     * input stream.
-     */
-    SwerveInputStream driveDirectAngle;
+    DriverStation.silenceJoystickConnectionWarning(true);
 
-    /**
-     * Clone's the angular velocity input stream and converts it to a robotRelative
-     * input stream.
-     */
-    SwerveInputStream driveRobotOriented;
+    // ==================== NAMED COMMANDS ====================
 
-    SwerveInputStream driveAngularVelocityKeyboard;
-    // Derive the heading axis with math!
-    SwerveInputStream driveDirectAngleKeyboard;
+    // pushout
+    NamedCommands.registerCommand("extend intake", m_pushout.PushCommand());
+    NamedCommands.registerCommand("retract intake", m_pushout.RetractCommand());
+
+    // intake
+    NamedCommands.registerCommand("intake", m_intake.runIntakeCommand());
+
+    // control all shooting
+    NamedCommands.registerCommand("Control All Shooting",
+        Commands.defer(() -> {
+          ControlAllShooting shootCmd = new ControlAllShooting(
+              m_shooter, m_conveyor, m_kicker, m_hood, m_rollers, m_turret, drivebase);
+          AimHood aimHoodCmd = new AimHood(m_hood, drivebase);
+
+          return Commands.sequence(
+              Commands.parallel(
+                  shootCmd,
+                  aimHoodCmd,
+                  m_pushout.AgitateCommand(),
+                  m_intake.runIntakeCommand()));
+        }, Set.of(m_shooter, m_conveyor, m_kicker, m_intake, m_rollers, m_hood, m_pushout)));
+
+    NamedCommands.registerCommand("Shoot With Timeout",
+        Commands.defer(() -> {
+          ControlAllShooting shootCmd = new ControlAllShooting(
+              m_shooter, m_conveyor, m_kicker, m_hood, m_rollers, m_turret, drivebase);
+          AimHood aimHoodCmd = new AimHood(m_hood, drivebase);
+
+          return Commands.sequence(
+              Commands.parallel(
+                  shootCmd,
+                  aimHoodCmd,
+                  m_pushout.AgitateCommand(),
+                  m_intake.runIntakeCommand()));
+        }, Set.of(m_shooter, m_conveyor, m_kicker, m_intake, m_rollers, m_hood, m_pushout)).withTimeout(4.0));
+
+    NamedCommands.registerCommand("Shoot and Intake",
+        Commands.defer(() -> {
+          ControlAllShooting shootCmd = new ControlAllShooting(
+              m_shooter, m_conveyor, m_kicker, m_hood, m_rollers, m_turret, drivebase);
+          AimHood aimHoodCmd = new AimHood(m_hood, drivebase);
+
+          return Commands.sequence(
+              Commands.parallel(
+                  shootCmd,
+                  aimHoodCmd,
+                  m_pushout.PushCommand(),
+                  m_intake.runIntakeCommand()));
+        }, Set.of(m_shooter, m_conveyor, m_kicker, m_intake, m_rollers, m_hood, m_pushout)));
+
+    // ==================== AUTO CHOOSER ====================
+
+    flipChooser.setDefaultOption("Not Flipped", false);
+    flipChooser.addOption("Flipped", true);
+    SmartDashboard.putData("Flip Auto", flipChooser);
+
+    flipChooser.onChange((Boolean flip) -> {
+      autoChooser = AutoBuilder.buildAutoChooserWithOptionsModifier(
+          autoStream -> autoStream.map(auto -> {
+            auto = new PathPlannerAuto(auto.getName(), flip);
+            return auto;
+          }));
+      autoChooser.setDefaultOption("Do Nothing", Commands.none());
+      SmartDashboard.putData("Auto Chooser", autoChooser);
+      loggedAutoChooser = new LoggedDashboardChooser<>("Auto Routine", autoChooser);
+    });
+
+    autoChooser = AutoBuilder.buildAutoChooserWithOptionsModifier(
+        autoStream -> autoStream.map(auto -> {
+          auto = new PathPlannerAuto(auto.getName(), flipChooser.getSelected());
+          return auto;
+        }));
+    autoChooser.setDefaultOption("Do Nothing", Commands.none());
+    SmartDashboard.putData("Auto Chooser", autoChooser);
+    loggedAutoChooser = new LoggedDashboardChooser<>("Auto Routine", autoChooser);
+  }
+
+  private void configureBindings() {
+
+    driveAngularVelocity = SwerveInputStream.of(drivebase.getSwerveDrive(),
+        () -> driverXbox.getLeftY() * -1,
+        () -> driverXbox.getLeftX() * -1)
+        .withControllerRotationAxis(() -> driverXbox.getRightX() * -1)
+        .deadband(OperatorConstants.DEADBAND)
+        .scaleTranslation(1.0)
+        .allianceRelativeControl(true);
+
+    driveDirectAngle = driveAngularVelocity.copy()
+        .withControllerHeadingAxis(driverXbox::getRightX, driverXbox::getRightY)
+        .headingWhile(true);
+
+    driveRobotOriented = driveAngularVelocity.copy()
+        .robotRelative(true)
+        .allianceRelativeControl(false);
+
+    driveAngularVelocityKeyboard = SwerveInputStream.of(drivebase.getSwerveDrive(),
+        () -> -driverXbox.getLeftY(),
+        () -> -driverXbox.getLeftX())
+        .withControllerRotationAxis(() -> driverXbox.getRawAxis(2))
+        .deadband(OperatorConstants.DEADBAND)
+        .scaleTranslation(0.8)
+        .allianceRelativeControl(true);
+
+    driveDirectAngleKeyboard = driveAngularVelocityKeyboard.copy()
+        .withControllerHeadingAxis(
+            () -> Math.sin(driverXbox.getRawAxis(2) * Math.PI) * (Math.PI * 2),
+            () -> Math.cos(driverXbox.getRawAxis(2) * Math.PI) * (Math.PI * 2))
+        .headingWhile(true)
+        .translationHeadingOffset(true)
+        .translationHeadingOffset(Rotation2d.fromDegrees(0));
+
+    // ==================== DRIVE COMMANDS ====================
+    Command driveFieldOrientedAngularVelocity = drivebase.driveFieldOriented(driveAngularVelocity);
+    Command driveFieldOrientedDirectAngleKeyboard = drivebase.driveFieldOriented(driveDirectAngleKeyboard);
 
     @SuppressWarnings("unused")
-    private PathConstraints autoConstraints;
+    Command driveFieldOrientedDirectAngle = drivebase.driveFieldOriented(driveDirectAngle);
 
+    @SuppressWarnings("unused")
+    Command driveRobotOrientedAngularVelocity = drivebase.driveFieldOriented(driveRobotOriented);
+    @SuppressWarnings("unused")
+    Command driveSetpointGen = drivebase.driveWithSetpointGeneratorFieldRelative(driveDirectAngle);
 
-    public void warmupCommands() {
-        @SuppressWarnings("unused")
-        ControlAllShooting shootWarm = new ControlAllShooting(
-            m_shooter, m_conveyor, m_kicker, m_pushout, m_intake, m_hood, m_rollers, m_turret, drivebase);
-        @SuppressWarnings("unused")
-        AimTurret turretWarm = new AimTurret(m_turret, drivebase);
-        @SuppressWarnings("unused")
-        AimHood hoodWarm = new AimHood(m_hood, drivebase);
+    @SuppressWarnings("unused")
+    Command driveFieldOrientedAngularVelocityKeyboard = drivebase.driveFieldOriented(driveAngularVelocityKeyboard);
+    @SuppressWarnings("unused")
+    Command driveSetpointGenKeyboard = drivebase.driveWithSetpointGeneratorFieldRelative(driveDirectAngleKeyboard);
+
+    // ==================== DEFAULT COMMANDS ====================
+
+    // turret and hood always aim at hub/ferry the whole match
+    // shooter idle entire match
+    m_shooter.setDefaultCommand(m_shooter.idleCommand());
+    m_turret.setDefaultCommand(new AimTurret(m_turret, drivebase));
+    m_hood.setDefaultCommand(m_hood.tuckCommand());
+
+    if (RobotBase.isSimulation()) {
+      drivebase.setDefaultCommand(driveFieldOrientedDirectAngleKeyboard);
+    } else {
+
+      drivebase.setDefaultCommand(driveFieldOrientedAngularVelocity);
+
     }
 
-    public RobotContainer() {
+    // ==================== DRIVER BINDINGS ====================
 
-        configureBindings();
-
-        DriverStation.silenceJoystickConnectionWarning(true);
-
-      
-
-
-        // ==================== NAMED COMMANDS ====================
-
-        // pushout
-        NamedCommands.registerCommand("extend intake", m_pushout.PushCommand());
-        NamedCommands.registerCommand("retract intake", m_pushout.RetractCommand());
-
-        // intake
-        NamedCommands.registerCommand("intake", m_intake.runIntakeCommand());
-
-        // control all shooting
-        NamedCommands.registerCommand("Control All Shooting",             
-            Commands.defer(() -> {
-                ControlAllShooting shootCmd = new ControlAllShooting(
-                  m_shooter, m_conveyor, m_kicker, m_pushout, m_intake, m_hood, m_rollers, m_turret, drivebase);
-                AimHood aimHoodCmd = new AimHood(m_hood, drivebase);
-
-                return Commands.sequence(
-                  Commands.parallel(
-                    shootCmd,
-                    aimHoodCmd,
-                    m_pushout.AgitateCommand())
-                ).finallyDo(() -> {
-                  m_shooter.setTargetRPSCommand(shootCmd.recordedTargetRPS).withTimeout(1.0);
-                  });
-            }, java.util.Collections.emptySet())
-        );
-
-        NamedCommands.registerCommand("Shoot With Timeout",             
-            Commands.defer(() -> {
-                ControlAllShooting shootCmd = new ControlAllShooting(
-                  m_shooter, m_conveyor, m_kicker, m_pushout, m_intake, m_hood, m_rollers, m_turret, drivebase);
-                AimHood aimHoodCmd = new AimHood(m_hood, drivebase);
-
-                return Commands.sequence(
-                  Commands.parallel(
-                    shootCmd,
-                    aimHoodCmd,
-                    m_pushout.AgitateCommand())
-                ).finallyDo(() -> {
-                  m_shooter.setTargetRPSCommand(shootCmd.recordedTargetRPS).withTimeout(1.0);
-                  });
-            }, java.util.Collections.emptySet()).withTimeout(4.0)
-        );
-
-        NamedCommands.registerCommand("Shoot and Intake",             
-            Commands.defer(() -> {
-                ControlAllShooting shootCmd = new ControlAllShooting(
-                  m_shooter, m_conveyor, m_kicker, m_pushout, m_intake, m_hood, m_rollers, m_turret, drivebase);
-                AimHood aimHoodCmd = new AimHood(m_hood, drivebase);
-                
-                return Commands.sequence(                 
-                  Commands.parallel(
-                    shootCmd,
-                    aimHoodCmd,
-                    m_pushout.PushCommand())
-                ).finallyDo(() -> {
-                  m_shooter.setTargetRPSCommand(shootCmd.recordedTargetRPS).withTimeout(1.0);
-                  });
-            }, java.util.Collections.emptySet())
-        );
-
-        
-
-        // ==================== AUTO CHOOSER ====================
-
-        flipChooser.setDefaultOption("Not Flipped", false);
-        flipChooser.addOption("Flipped", true);
-        SmartDashboard.putData("Flip Auto", flipChooser);
-
-        flipChooser.onChange((Boolean flip) -> {
-            autoChooser = AutoBuilder.buildAutoChooserWithOptionsModifier(
-                    autoStream -> autoStream.map(auto -> {
-                        auto = new PathPlannerAuto(auto.getName(), flip);
-                        return auto;
-                    }));
-            autoChooser.setDefaultOption("Do Nothing", Commands.none());
-            SmartDashboard.putData("Auto Chooser", autoChooser);
-            loggedAutoChooser = new LoggedDashboardChooser<>("Auto Routine", autoChooser);
-        });
-
-        autoChooser = AutoBuilder.buildAutoChooserWithOptionsModifier(
-                autoStream -> autoStream.map(auto -> {
-                    auto = new PathPlannerAuto(auto.getName(), flipChooser.getSelected());
-                    return auto;
-                }));
-        autoChooser.setDefaultOption("Do Nothing", Commands.none());
-        SmartDashboard.putData("Auto Chooser", autoChooser);
-        loggedAutoChooser = new LoggedDashboardChooser<>("Auto Routine", autoChooser);
-    }
-
-    private void configureBindings() {
-
-        driveAngularVelocity = SwerveInputStream.of(drivebase.getSwerveDrive(),
-                () -> driverXbox.getLeftY() * -1,
-                () -> driverXbox.getLeftX() * -1)
-                .withControllerRotationAxis(() -> driverXbox.getRightX() * -1)
-                .deadband(OperatorConstants.DEADBAND)
-                .scaleTranslation(1.0)
-                .allianceRelativeControl(true);
-
-        driveDirectAngle = driveAngularVelocity.copy()
-                .withControllerHeadingAxis(driverXbox::getRightX, driverXbox::getRightY)
-                .headingWhile(true);
-
-        driveRobotOriented = driveAngularVelocity.copy()
-                .robotRelative(true)
-                .allianceRelativeControl(false);
-
-        driveAngularVelocityKeyboard = SwerveInputStream.of(drivebase.getSwerveDrive(),
-                () -> -driverXbox.getLeftY(),
-                () -> -driverXbox.getLeftX())
-                .withControllerRotationAxis(() -> driverXbox.getRawAxis(2))
-                .deadband(OperatorConstants.DEADBAND)
-                .scaleTranslation(0.8)
-                .allianceRelativeControl(true);
-
-        driveDirectAngleKeyboard = driveAngularVelocityKeyboard.copy()
-                .withControllerHeadingAxis(
-                        () -> Math.sin(driverXbox.getRawAxis(2) * Math.PI) * (Math.PI * 2),
-                        () -> Math.cos(driverXbox.getRawAxis(2) * Math.PI) * (Math.PI * 2))
-                .headingWhile(true)
-                .translationHeadingOffset(true)
-                .translationHeadingOffset(Rotation2d.fromDegrees(0));
-
-        // ==================== DRIVE COMMANDS ====================
-        Command driveFieldOrientedAngularVelocity = drivebase.driveFieldOriented(driveAngularVelocity);
-        Command driveFieldOrientedDirectAngleKeyboard = drivebase.driveFieldOriented(driveDirectAngleKeyboard);
-       
-        @SuppressWarnings("unused")
-        Command driveFieldOrientedDirectAngle = drivebase.driveFieldOriented(driveDirectAngle);
-
-        @SuppressWarnings("unused")
-        Command driveRobotOrientedAngularVelocity = drivebase.driveFieldOriented(driveRobotOriented);
-        @SuppressWarnings("unused")
-        Command driveSetpointGen = drivebase.driveWithSetpointGeneratorFieldRelative(driveDirectAngle);
-
-        @SuppressWarnings("unused")
-        Command driveFieldOrientedAngularVelocityKeyboard = drivebase.driveFieldOriented(driveAngularVelocityKeyboard);
-        @SuppressWarnings("unused")
-        Command driveSetpointGenKeyboard = drivebase.driveWithSetpointGeneratorFieldRelative(driveDirectAngleKeyboard);
-
-        // ==================== DEFAULT COMMANDS ====================
-
-        // turret and hood always aim at hub/ferry the whole match
-        m_turret.setDefaultCommand(new AimTurret(m_turret, drivebase));
-        m_hood.setDefaultCommand(m_hood.tuckCommand());
-
-        if (RobotBase.isSimulation()) {
-            drivebase.setDefaultCommand(driveFieldOrientedDirectAngleKeyboard);
-        } else {
-           
-                drivebase.setDefaultCommand(driveFieldOrientedAngularVelocity);
-            
-        }
-
-        // ==================== DRIVER BINDINGS ====================
-
-        // RT shoots
-        driverXbox.rightTrigger().whileTrue(
-            Commands.defer(() -> {
-                ControlAllShooting shootCmd = new ControlAllShooting(
-                  m_shooter, m_conveyor, m_kicker, m_pushout, m_intake, m_hood, m_rollers, m_turret, drivebase);
-                AimHood aimHoodCmd = new AimHood(m_hood, drivebase);                  
-                return Commands.sequence(
-                  Commands.parallel(
-                    shootCmd,
-                    aimHoodCmd,
-                    drivebase.lockCommand( // lock wheels while shooting
+    // RT shoots
+    driverXbox.rightTrigger().whileTrue(
+        Commands.defer(() -> {
+          ControlAllShooting shootCmd = new ControlAllShooting(
+              m_shooter, m_conveyor, m_kicker, m_hood, m_rollers, m_turret, drivebase);
+          AimHood aimHoodCmd = new AimHood(m_hood, drivebase);
+          return Commands.sequence(
+              Commands.parallel(
+                  shootCmd,
+                  aimHoodCmd,
+                  drivebase.lockCommand( // lock wheels while shooting
                       driverXbox::getLeftX,
                       driverXbox::getLeftY,
                       driverXbox::getRightX,
-                      driveAngularVelocity::get))
-                ).finallyDo(() -> {
-                  m_shooter.setTargetRPSCommand(shootCmd.recordedTargetRPS).withTimeout(1.0);
-                  });
-            }, java.util.Collections.emptySet())
-        );
+                      driveAngularVelocity::get)));
+        }, Set.of(m_shooter, m_conveyor, m_kicker, m_rollers, m_hood, drivebase)));
 
-        driverXbox.rightTrigger().whileTrue(m_pushout.AgitateCommand().onlyWhile(() -> !driverXbox.leftTrigger().getAsBoolean()));
+    driverXbox.rightTrigger().and(driverXbox.leftTrigger().negate())
+        .whileTrue(m_pushout.AgitateCommand());
 
-        // LT intakes
-        driverXbox.leftTrigger().whileTrue(
-          Commands.parallel(
-            m_pushout.PushCommand(),
-            m_intake.runIntakeCommand()
-          )
-        );
+    // intake runs whenever the driver is asking when shooting or just intaking
+    // or both
+    driverXbox.rightTrigger().or(driverXbox.leftTrigger())
+        .whileTrue(m_intake.runIntakeCommand());
 
-        // LB retracts and stops intake
-        driverXbox.leftBumper().whileTrue(
-          Commands.parallel(
-            m_pushout.RetractCommand(),
-            m_intake.stopIntakeCommand()
-          )
-        );
+    // LT extends pushout to intaking position
+    driverXbox.leftTrigger().whileTrue(m_pushout.PushCommand());
 
-        // RB unjams
-        driverXbox.rightBumper().whileTrue(
-          Commands.parallel(
+    // LB retracts
+    driverXbox.leftBumper().whileTrue(m_pushout.RetractCommand());
+
+    // RB unjams
+    driverXbox.rightBumper().whileTrue(
+        Commands.parallel(
             m_kicker.ReverseKickerCommand(),
             m_conveyor.ReverseConveyorCommand(),
-            m_rollers.runReverseRollersCommand()
-          )
-        );
+            m_rollers.runReverseRollersCommand()));
 
-        // A — outtake
-        driverXbox.a().whileTrue(
-          Commands.parallel(
+    // A — outtake
+    driverXbox.a().whileTrue(
+        Commands.parallel(
             m_intake.runOuttakeCommand(),
-            m_rollers.runReverseRollersCommand()
-          )
-        );
+            m_rollers.runReverseRollersCommand()));
 
-        // POV left — drive to pose
-        driverXbox.povLeft().whileTrue(drivebase.driveToPoseDeffered());
+    // POV left — drive to pose
+    driverXbox.povLeft().whileTrue(drivebase.driveToPoseDeffered());
 
-        // start zero gyro
-        driverXbox.start().onTrue(Commands.runOnce(drivebase::zeroGyro));
+    // start zero gyro
+    driverXbox.start().onTrue(Commands.runOnce(drivebase::zeroGyro));
 
-        // ==================== OPERATOR BINDINGS ====================
-        
-        // Testing
-        operatorXbox.rightTrigger().whileTrue(
-          Commands.parallel(
+    // ==================== OPERATOR BINDINGS ====================
+
+    // Testing
+    operatorXbox.rightTrigger().whileTrue(
+        Commands.parallel(
             m_conveyor.HopperToShooterCommand(),
             m_kicker.KickerCommand(),
             m_rollers.runRollersToConveyorCommand(),
-            m_shooter.shootingTestCommad()
-          )
-        );
+            m_shooter.shootingTestCommad()));
 
-        // reset encoder
-        operatorXbox.start().onTrue(m_pushout.ResetEncoderCommand());
+    // reset encoder
+    operatorXbox.start().onTrue(m_pushout.ResetEncoderCommand());
 
-        // intake
-        operatorXbox.x().whileTrue(m_intake.runIntakeCommand());
-        operatorXbox.a().whileTrue(
-          Commands.parallel(
+    // intake
+    operatorXbox.x().whileTrue(m_intake.runIntakeCommand());
+    operatorXbox.a().whileTrue(
+        Commands.parallel(
             m_intake.runOuttakeCommand(),
-            m_rollers.runReverseRollersCommand()
-          )
-        );
+            m_rollers.runReverseRollersCommand()));
 
-        // pushout
-        operatorXbox.y().whileTrue(m_pushout.PushoutDutyCycleCommand());
-        operatorXbox.b().whileTrue(m_pushout.PushoutDutyCycleRetractCommand());
+    // pushout
+    operatorXbox.y().whileTrue(m_pushout.PushoutDutyCycleCommand());
+    operatorXbox.b().whileTrue(m_pushout.PushoutDutyCycleRetractCommand());
 
-        // vision
-        operatorXbox.povUp().onTrue(drivebase.FrontToggle());
-        operatorXbox.povLeft().onTrue(drivebase.LeftToggle());
-        operatorXbox.povRight().onTrue(drivebase.VisionToggle());
-        operatorXbox.povDown().onTrue(drivebase.BackToggle());
+    // vision
+    operatorXbox.povUp().onTrue(drivebase.FrontToggle());
+    operatorXbox.povLeft().onTrue(drivebase.LeftToggle());
+    operatorXbox.povRight().onTrue(drivebase.VisionToggle());
+    operatorXbox.povDown().onTrue(drivebase.BackToggle());
 
-        // ==================== SIMULATION ====================
+    // ==================== SIMULATION ====================
 
-        if (Robot.isSimulation()) {
-            Pose2d target = new Pose2d(new Translation2d(1, 4), Rotation2d.fromDegrees(90));
-            driveDirectAngleKeyboard.driveToPose(() -> target,
-                    new ProfiledPIDController(5, 0, 0, new Constraints(5, 2)),
-                    new ProfiledPIDController(5, 0, 0,
-                            new Constraints(Units.degreesToRadians(360), Units.degreesToRadians(180))));
-            driverXbox.start().onTrue(Commands.runOnce(() -> drivebase.resetOdometry(new Pose2d(3, 3, new Rotation2d()))));
-            driverXbox.button(1).whileTrue(drivebase.sysIdDriveMotorCommand());
-            driverXbox.button(2).whileTrue(Commands.runEnd(
-                    () -> driveDirectAngleKeyboard.driveToPoseEnabled(true),
-                    () -> driveDirectAngleKeyboard.driveToPoseEnabled(false)));
-        }
-
-        if (DriverStation.isTest()) {
-            
-                drivebase.setDefaultCommand(driveFieldOrientedAngularVelocity);
-            
-        }
+    if (Robot.isSimulation()) {
+      Pose2d target = new Pose2d(new Translation2d(1, 4), Rotation2d.fromDegrees(90));
+      driveDirectAngleKeyboard.driveToPose(() -> target,
+          new ProfiledPIDController(5, 0, 0, new Constraints(5, 2)),
+          new ProfiledPIDController(5, 0, 0,
+              new Constraints(Units.degreesToRadians(360), Units.degreesToRadians(180))));
+      driverXbox.start().onTrue(Commands.runOnce(() -> drivebase.resetOdometry(new Pose2d(3, 3, new Rotation2d()))));
+      driverXbox.button(1).whileTrue(drivebase.sysIdDriveMotorCommand());
+      driverXbox.button(2).whileTrue(Commands.runEnd(
+          () -> driveDirectAngleKeyboard.driveToPoseEnabled(true),
+          () -> driveDirectAngleKeyboard.driveToPoseEnabled(false)));
     }
 
-    private Alliance getAlliance() {
-        return DriverStation.getAlliance().orElse(Alliance.Red);
+    if (DriverStation.isTest()) {
+
+      drivebase.setDefaultCommand(driveFieldOrientedAngularVelocity);
+
     }
+  }
 
-    private boolean isInAllianceZone() {
-        Alliance alliance = getAlliance();
-        Distance blueZone = Inches.of(182);
-        Distance redZone = Inches.of(469);
+  private Alliance getAlliance() {
+    return DriverStation.getAlliance().orElse(Alliance.Red);
+  }
 
-        if (alliance == Alliance.Blue && drivebase.getPose().getMeasureX().lt(blueZone))
-            return true;
-        else if (alliance == Alliance.Red && drivebase.getPose().getMeasureX().gt(redZone))
-            return true;
-        return false;
-    }
+  private boolean isInAllianceZone() {
+    Alliance alliance = getAlliance();
+    Distance blueZone = Inches.of(182);
+    Distance redZone = Inches.of(469);
 
-    @SuppressWarnings("unused")
-    private boolean isInOpponentZone() {
-        Alliance alliance = getAlliance();
-        Distance blueZone = Inches.of(182);
-        Distance redZone = Inches.of(469);
+    if (alliance == Alliance.Blue && drivebase.getPose().getMeasureX().lt(blueZone))
+      return true;
+    else if (alliance == Alliance.Red && drivebase.getPose().getMeasureX().gt(redZone))
+      return true;
+    return false;
+  }
 
-        if (alliance == Alliance.Red && drivebase.getPose().getMeasureX().lt(blueZone))
-            return true;
-        else if (alliance == Alliance.Blue && drivebase.getPose().getMeasureX().gt(redZone))
-            return true;
-        return false;
-    }
+  @SuppressWarnings("unused")
+  private boolean isInOpponentZone() {
+    Alliance alliance = getAlliance();
+    Distance blueZone = Inches.of(182);
+    Distance redZone = Inches.of(469);
 
-    @SuppressWarnings("unused")
-    private boolean isOnAllianceOutpostSide() {
-        Alliance alliance = getAlliance();
-        Distance midLine = Inches.of(158.84375);
+    if (alliance == Alliance.Red && drivebase.getPose().getMeasureX().lt(blueZone))
+      return true;
+    else if (alliance == Alliance.Blue && drivebase.getPose().getMeasureX().gt(redZone))
+      return true;
+    return false;
+  }
 
-        if (alliance == Alliance.Blue && drivebase.getPose().getMeasureY().lt(midLine))
-            return true;
-        else if (alliance == Alliance.Red && drivebase.getPose().getMeasureY().gt(midLine))
-            return true;
-        return false;
-    }
+  @SuppressWarnings("unused")
+  private boolean isOnAllianceOutpostSide() {
+    Alliance alliance = getAlliance();
+    Distance midLine = Inches.of(158.84375);
 
-    @SuppressWarnings("unused")
-    private boolean isAimedAt(Pose2d target, double toleranceDegrees) {
-        Pose2d robot = drivebase.getPose();
-        double targetAngle = Math.toDegrees(Math.atan2(
-                target.getY() - robot.getY(),
-                target.getX() - robot.getX()));
-        double currentAngle = robot.getRotation().getDegrees();
-        double error = Math.abs(currentAngle - targetAngle) % 360;
-        if (error > 180)
-            error = 360 - error;
-        return error <= toleranceDegrees;
-    }
+    if (alliance == Alliance.Blue && drivebase.getPose().getMeasureY().lt(midLine))
+      return true;
+    else if (alliance == Alliance.Red && drivebase.getPose().getMeasureY().gt(midLine))
+      return true;
+    return false;
+  }
 
-    public void logControllerInputs() {
-        Logger.recordOutput("Input/Driver/LeftX", driverXbox.getLeftX());
-        Logger.recordOutput("Input/Driver/LeftY", driverXbox.getLeftY());
-        Logger.recordOutput("Input/Driver/RightX", driverXbox.getRightX());
-        Logger.recordOutput("Input/Driver/RightY", driverXbox.getRightY());
-        Logger.recordOutput("Input/Driver/LeftTrigger", driverXbox.getLeftTriggerAxis());
-        Logger.recordOutput("Input/Driver/RightTrigger", driverXbox.getRightTriggerAxis());
+  @SuppressWarnings("unused")
+  private boolean isAimedAt(Pose2d target, double toleranceDegrees) {
+    Pose2d robot = drivebase.getPose();
+    double targetAngle = Math.toDegrees(Math.atan2(
+        target.getY() - robot.getY(),
+        target.getX() - robot.getX()));
+    double currentAngle = robot.getRotation().getDegrees();
+    double error = Math.abs(currentAngle - targetAngle) % 360;
+    if (error > 180)
+      error = 360 - error;
+    return error <= toleranceDegrees;
+  }
 
-        Logger.recordOutput("Input/Operator/LeftX", operatorXbox.getLeftX());
-        Logger.recordOutput("Input/Operator/LeftY", operatorXbox.getLeftY());
-        Logger.recordOutput("Input/Operator/RightX", operatorXbox.getRightX());
-        Logger.recordOutput("Input/Operator/RightY", operatorXbox.getRightY());
-        Logger.recordOutput("Input/Operator/LeftTrigger", operatorXbox.getLeftTriggerAxis());
-        Logger.recordOutput("Input/Operator/RightTrigger", operatorXbox.getRightTriggerAxis());
+  public void logControllerInputs() {
+    Logger.recordOutput("Input/Driver/LeftX", driverXbox.getLeftX());
+    Logger.recordOutput("Input/Driver/LeftY", driverXbox.getLeftY());
+    Logger.recordOutput("Input/Driver/RightX", driverXbox.getRightX());
+    Logger.recordOutput("Input/Driver/RightY", driverXbox.getRightY());
+    Logger.recordOutput("Input/Driver/LeftTrigger", driverXbox.getLeftTriggerAxis());
+    Logger.recordOutput("Input/Driver/RightTrigger", driverXbox.getRightTriggerAxis());
 
-        Logger.recordOutput("Shooting/RTHeld", driverXbox.rightTrigger().getAsBoolean());
-        Logger.recordOutput("Shooting/InAllianceZone", isInAllianceZone());
-    }
+    Logger.recordOutput("Input/Operator/LeftX", operatorXbox.getLeftX());
+    Logger.recordOutput("Input/Operator/LeftY", operatorXbox.getLeftY());
+    Logger.recordOutput("Input/Operator/RightX", operatorXbox.getRightX());
+    Logger.recordOutput("Input/Operator/RightY", operatorXbox.getRightY());
+    Logger.recordOutput("Input/Operator/LeftTrigger", operatorXbox.getLeftTriggerAxis());
+    Logger.recordOutput("Input/Operator/RightTrigger", operatorXbox.getRightTriggerAxis());
 
-    public Command getAutonomousCommand() {
-        Command selected = loggedAutoChooser.get();
-        if (selected == null)
-            return Commands.none();
-        return selected;
-    }
+    Logger.recordOutput("Shooting/RTHeld", driverXbox.rightTrigger().getAsBoolean());
+    Logger.recordOutput("Shooting/InAllianceZone", isInAllianceZone());
+  }
 
-    public void setMotorBrake(boolean brake) {
-        drivebase.setMotorBrake(brake);
-    }
+  public Command getAutonomousCommand() {
+    Command selected = loggedAutoChooser.get();
+    if (selected == null)
+      return Commands.none();
+    return selected;
+  }
 
-    public void setUseMegaTag2(boolean use) {
-        drivebase.useMegaTag2 = use;
-    }
+  public void setMotorBrake(boolean brake) {
+    drivebase.setMotorBrake(brake);
+  }
+
+  public void setUseMegaTag2(boolean use) {
+    drivebase.useMegaTag2 = use;
+  }
 }
